[package]
name = "bson-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
reqwest = "0.11"
anyhow = "1.0"
